--- a/src/styles/Navbar.module.scss
+++ b/src/styles/Navbar.module.scss
@@ -84,7 +84,6 @@
     }
   }
   .menuSection {
-    background-color: blue;
     .menu {
       height: 100%;
       transition: 5s;
